04-path-security-and-networking/405-ingress-controllers/templates/kube-aws-ingress-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ingress-aws-controller
  namespace: kube-system
  labels:
    component: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ingress
  template:
    metadata:
      labels:
        component: ingress
    spec:
      containers:
      - name: kube-ingress-aws-controller
        image: registry.opensource.zalan.do/teapot/kube-ingress-aws-controller:latest
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 25Mi
