04-path-security-and-networking/405-ingress-controllers/templates/sample-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      application: demo
      version: v2
  template:
    metadata:
      labels:
        application: demo
        version: v2
    spec:
      containers:
      - name: skipper-demo
        image: registry.opensource.zalan.do/pathfinder/skipper:latest
        args:
          - "skipper"
          - "-inline-routes"
          - "* -> inlineContent(\"<body style='color: white; background-color: green;'><h1>Hello AWS!</h1>\") -> <shunt>"
        ports:
        - containerPort: 9090
