04-path-security-and-networking/405-ingress-controllers/templates/app.yml
apiVersion: v1
kind: Service
metadata:
  name: name-service
spec:
  selector:
    app: name-pod
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-service
spec:
  selector:
    app: greeter-pod
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp-pod
  ports:
    - name: web
      port: 80
      targetPort: 8080
  type: NodePort
