04-path-security-and-networking/405-ingress-controllers/templates/sample-ing-v1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demo-v1"
  labels:
    application: demo
spec:
  rules:
  - host: "<HOSTNAME>"
    http:
      paths:
      - backend:
          serviceName: "demo-app-v1"
          servicePort: 80
